begin home page, add background colors

--- a/index.html
+++ b/index.html
@@ -2,9 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>AGAC Case Study</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/components.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <title>AGAC | Replica</title>
 </head>
 <body>
-  <h1>AGAC home page will be here.</h1>
+  <div class="header-main-nav">
+    <ul class="header-main-nav__list">
+      <li><a href="!#"><img class="logo-square" src="../images/header-home-button.png" alt="header home button"></a></li>
+      <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
+      <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
+      <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
+      <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
+      <li class="nav-text"><a class="nav" href="!#">About</a></li>
+      <li class="nav-text"><a class="nav" href="!#">Resources</a></li>
+      <li class="nav-text"><a class="nav" href="!#">AGAC Collection</a></li>
+      <li class="nav-text"><a class="nav" href="!#">Shop</a></li>
+    </ul>
+    <div class="language">
+      <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
+    </div>
+  </div>
 </body>
 </html>
