--- a/index.html
+++ b/index.html
@@ -26,5 +26,179 @@
       <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
     </div>
   </div>
+
+  <div class="gallery">
+    <div class="gallery-block__letter">
+    <img class="gallery-block__letter" 
+    src="images/gallery-block__letter-a.png" 
+    alt="the letter A">
+    </div>
+
+    <div class="gallery-block">
+    <h4>Gallery Name</h4>
+    <h5>Location</h5>
+    <img class="gallery-block__image" 
+    src="screenshots/atoms/gallery-block__image.png" 
+    alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+    <h4>Gallery Name</h4>
+    <h5>Location</h5>
+    <img class="gallery-block__image" 
+    src="screenshots/atoms/gallery-block__image.png" 
+    alt="gallery block">
+    </div>
+
+    <div class="gallery-block__letter">
+    <img class="gallery-block__letter" 
+    src="../images/gallery-block__letter-g.png" 
+    alt="the letter G">
+    </div>
+
+    <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
+
+    <div class="gallery-block">
+    <h4>Gallery Name</h4>
+    <h5>Location</h5>
+    <img class="gallery-block__image" 
+    src="screenshots/atoms/gallery-block__image.png" 
+    alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block__letter">
+      <img class="gallery-block__letter" 
+      src="../images/gallery-block__letter-a.png" 
+      alt="the letter A">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block__letter">
+      <img class="gallery-block__letter" 
+      src="../images/gallery-block__letter-c.png" 
+      alt="the letter C">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block__letter">
+      <img class="gallery-block__letter" 
+      src="../images/gallery-block__letter-amp.png" 
+      alt="ampersand">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+    <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="screenshots/atoms/gallery-block__image.png" 
+      alt="gallery block">
+    </div>
+
+
+
+
+
 </body>
 </html>
