add gallery, fix spacing

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     <div class="gallery-block">
     <h4>Gallery Name</h4>
     <h5>Location</h5>
-    <img class="gallery-block__image" 
-    src="screenshots/atoms/gallery-block__image.png" 
+    <img class="gallery-block__image"
+    src="images/gallery-block__image.png" 
     alt="gallery block">
     </div>
 
@@ -46,7 +46,7 @@
     <h4>Gallery Name</h4>
     <h5>Location</h5>
     <img class="gallery-block__image" 
-    src="screenshots/atoms/gallery-block__image.png" 
+    src="images/gallery-block__image.png" 
     alt="gallery block">
     </div>
 
@@ -62,7 +62,7 @@
     <h4>Gallery Name</h4>
     <h5>Location</h5>
     <img class="gallery-block__image" 
-    src="screenshots/atoms/gallery-block__image.png" 
+    src="images/gallery-block__image.png" 
     alt="gallery block">
     </div>
 
@@ -70,7 +70,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -78,7 +78,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -86,7 +86,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -100,7 +100,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -114,7 +114,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -122,7 +122,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -130,7 +130,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -138,7 +138,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -152,7 +152,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -160,7 +160,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -168,7 +168,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -176,7 +176,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -184,7 +184,7 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
 
@@ -192,10 +192,10 @@
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
-      src="screenshots/atoms/gallery-block__image.png" 
+      src="images/gallery-block__image.png" 
       alt="gallery block">
     </div>
-
+  </div>
 
 
 
