--- a/index.html
+++ b/index.html
@@ -10,193 +10,198 @@
   <title>AGAC | Replica</title>
 </head>
 <body>
-  <div class="header-main-nav">
-    <ul class="header-main-nav__list">
-      <li><a href="!#"><img class="logo-square" src="../images/header-home-button.png" alt="header home button"></a></li>
-      <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
-      <li class="nav-text"><a class="nav" href="!#">About</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Resources</a></li>
-      <li class="nav-text"><a class="nav" href="!#">AGAC Collection</a></li>
-      <li class="nav-text"><a class="nav" href="!#">Shop</a></li>
-    </ul>
-    <div class="language">
-      <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
+  <header>
+    <div class="header-main-nav">
+      <ul class="header-main-nav__list">
+        <li><a href="!#"><img class="logo-square" src="../images/header-home-button.png" alt="header home button"></a></li>
+        <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
+        <li class="nav-text"><a class="nav" href="!#">About</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Resources</a></li>
+        <li class="nav-text"><a class="nav" href="!#">AGAC Collection</a></li>
+        <li class="nav-text"><a class="nav" href="!#">Shop</a></li>
+      </ul>
+      <div class="language">
+        <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
+      </div>
     </div>
-  </div>
+  </header>
 
-  <div class="gallery">
-    <div class="gallery-block__letter">
-    <img class="gallery-block__letter" 
-    src="images/gallery-block__letter-a.png" 
-    alt="the letter A">
-    </div>
+  <main>
+    <div class="gallery">
+      <div class="gallery-block__letter">
+      <img class="gallery-block__letter" 
+      src="images/gallery-block__letter-a.png" 
+      alt="the letter A">
+      </div>
 
-    <div class="gallery-block">
-    <h4>Gallery Name</h4>
-    <h5>Location</h5>
-    <img class="gallery-block__image"
-    src="images/gallery-block__image.png" 
-    alt="gallery block">
-    </div>
+      <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image"
+      src="images/gallery-block__image.png" 
+      alt="gallery block">
+      </div>
 
-    <div class="gallery-block">
-    <h4>Gallery Name</h4>
-    <h5>Location</h5>
-    <img class="gallery-block__image" 
-    src="images/gallery-block__image.png" 
-    alt="gallery block">
-    </div>
-
-    <div class="gallery-block__letter">
-    <img class="gallery-block__letter" 
-    src="../images/gallery-block__letter-g.png" 
-    alt="the letter G">
-    </div>
-
-    <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
-
-    <div class="gallery-block">
-    <h4>Gallery Name</h4>
-    <h5>Location</h5>
-    <img class="gallery-block__image" 
-    src="images/gallery-block__image.png" 
-    alt="gallery block">
-    </div>
-
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block__letter">
+      <img class="gallery-block__letter" 
+      src="../images/gallery-block__letter-g.png" 
+      alt="the letter G">
+      </div>
+
+      <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
+
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block__letter">
+      <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="images/gallery-block__image.png" 
+      alt="gallery block">
+      </div>
+
+      <div class="gallery-block">
+      <h4>Gallery Name</h4>
+      <h5>Location</h5>
+      <img class="gallery-block__image" 
+      src="images/gallery-block__image.png" 
+      alt="gallery block">
+      </div>
+
+      <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
       src="../images/gallery-block__letter-a.png" 
       alt="the letter A">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block__letter">
+      <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
       src="../images/gallery-block__letter-c.png" 
       alt="the letter C">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block__letter">
+      <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
       src="../images/gallery-block__letter-amp.png" 
       alt="ampersand">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
-    </div>
+      </div>
 
-    <div class="gallery-block">
+      <div class="gallery-block">
       <h4>Gallery Name</h4>
       <h5>Location</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
+      </div>
     </div>
-  </div>
+  </main>
 
+  <footer>
   <div class="footer-container">
     <div class="footer-brand">
         <img 
@@ -277,11 +282,8 @@
         <p class="footer-text__copyright">&copy; AGAC</p>
         <p class="footer-text__copyright-credit">Design and code by Principal</p>
       </div>
-    
     </div>
-
-
-
+  </footer>
 
 </body>
 </html>
