--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
-      src="../images/gallery-block__letter-g.png" 
+      src="images/gallery-block__letter-g.png" 
       alt="the letter G">
       </div>
 
@@ -95,7 +95,7 @@
 
       <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
-      src="../images/gallery-block__letter-a.png" 
+      src="images/gallery-block__letter-a.png" 
       alt="the letter A">
       </div>
 
@@ -109,7 +109,7 @@
 
       <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
-      src="../images/gallery-block__letter-c.png" 
+      src="images/gallery-block__letter-c.png" 
       alt="the letter C">
       </div>
 
@@ -147,7 +147,7 @@
 
       <div class="gallery-block__letter">
       <img class="gallery-block__letter" 
-      src="../images/gallery-block__letter-amp.png" 
+      src="images/gallery-block__letter-amp.png" 
       alt="ampersand">
       </div>
 
@@ -206,7 +206,7 @@
     <div class="footer-brand">
         <img 
         class="footer-brand__logo-image" 
-        src="../images/footer-brand__logo-image.svg"
+        src="images/footer-brand__logo-image.svg"
         alt="ACAG logo">
         <p class="footer-brand__logo-name">Contemporary Art <br> Galleries Assoction</p>
       </div>
@@ -265,17 +265,17 @@
         <p class="footer-text__black">Follow us</p>
         <!--figure out links, icons-->
         <ul class="social-list">
-        <li><img class="social-icon-circle" src="../images/footer-social__logo-facebook.png" alt="facebook icon"></li>
-        <li><img class="social-icon-circle" src="../images/footer-social__logo-twitter.png" alt="twitter icon"></li>
-        <li><img class="social-icon-circle" src="../images/footer-social__logo-instagram.png" alt="instagram icon"></li>
-        <li><img class="social-icon-circle" src="../images/footer-social__logo-youtube.png" alt="youtube icon"></li>
-        <li><img class="social-icon-circle" src="../images/footer-social__logo-linkedin.png" alt="linkedin icon"></li>
+        <li><img class="social-icon-circle" src="images/footer-social__logo-facebook.png" alt="facebook icon"></li>
+        <li><img class="social-icon-circle" src="images/footer-social__logo-twitter.png" alt="twitter icon"></li>
+        <li><img class="social-icon-circle" src="images/footer-social__logo-instagram.png" alt="instagram icon"></li>
+        <li><img class="social-icon-circle" src="images/footer-social__logo-youtube.png" alt="youtube icon"></li>
+        <li><img class="social-icon-circle" src="images/footer-social__logo-linkedin.png" alt="linkedin icon"></li>
         </ul>
       </div>
 
       <div class="footer-support">
         <p class="footer-text__black">With the support of</p>
-        <img src="../images/footer-support__logo.svg" alt="Logo for Societ&eacute; de D&eacute;velopment des Enterprises Colturelles Quebec">
+        <img src="images/footer-support__logo.svg" alt="Logo for Societ&eacute; de D&eacute;velopment des Enterprises Colturelles Quebec">
       </div>
 
       <div class="footer-copyright-credit">
