fix home button image link

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header>
     <div class="header-main-nav">
       <ul class="header-main-nav__list">
-        <li><a href="!#"><img class="logo-square" src="../images/header-home-button.png" alt="header home button"></a></li>
+        <li><a href="!#"><img class="logo-square" src="images/header-home-button.png" alt="header home button"></a></li>
         <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
         <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
         <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
