add gallery names and locations

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <title>AGAC | Replica</title>
 </head>
+
 <body>
   <header>
     <div class="header-main-nav">
@@ -38,16 +39,16 @@
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Laroche/Joncas</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image"
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Gallery 3</h4>
+      <h5>Quebec</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
@@ -62,32 +63,32 @@
       <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Franz Kaka</h4>
+      <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Art45</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Paul Petro Contemporary Art</h4>
+      <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>DURAN | MASHAAL</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
@@ -100,8 +101,8 @@
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Bradley Ertaskiran</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
@@ -114,32 +115,32 @@
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Pang&eacute;e</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>General Hardware Contemporary</h4>
+      <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Galerie Robert Poulin</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>United Contemporary</h4>
+      <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
@@ -152,48 +153,48 @@
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Galerie Bernard</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Christie Contemporary</h4>
+      <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Zalucky Contemporary</h4>
+      <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Patrick Mikhail</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Studio 21 Fine Art</h4>
+      <h5>Halifax</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery Name</h4>
-      <h5>Location</h5>
+      <h4>Galerie Robertson Ar&egrave;s</h4>
+      <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__image.png" 
       alt="gallery block">
