adjust spacing for general hardware contemporary

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
       <div class="gallery-block">
       <h4>General Hardware Contemporary</h4>
       <h5>Toronto</h5>
-      <img class="gallery-block__image" 
+      <img class="gallery-block__image general-hardware" 
       src="images/gallery-block__img-general-hardware.png" 
       alt="gallery block">
       </div>
