add alt text for images

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image"
       src="images/gallery-block__img-laroche-joncas.png"
-      alt="gallery block">
+      alt="Art in Laroche/Joncas Gallery">
       </div>
 
       <div class="gallery-block">
@@ -51,7 +51,7 @@
       <h5>Quebec</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-galerie-3.png" 
-      alt="gallery block">
+      alt="Art in Gallery 3">
       </div>
 
       <div class="gallery-block__letter">
@@ -67,7 +67,7 @@
       <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-franz-kaka.png" 
-      alt="gallery block">
+      alt="Art in Franz Kaka Gallery">
       </div>
 
       <div class="gallery-block">
@@ -75,7 +75,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-art-45.png" 
-      alt="gallery block">
+      alt="Art in Art45 Gallery">
       </div>
 
       <div class="gallery-block">
@@ -83,7 +83,7 @@
       <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-paul_petro.png" 
-      alt="gallery block">
+      alt="Art in Paul Petro Contemporary Art Gallery">
       </div>
 
       <div class="gallery-block">
@@ -91,7 +91,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-duran-marshaal.png" 
-      alt="gallery block">
+      alt="Art in DURAN | MASHAAL Gallery">
       </div>
 
       <div class="gallery-block__letter">
@@ -105,7 +105,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-bradley-ertaskiran.png" 
-      alt="gallery block">
+      alt="Art in Bradley Ertaskiran Gallery">
       </div>
 
       <div class="gallery-block__letter">
@@ -119,7 +119,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-pangee.png" 
-      alt="gallery block">
+      alt="Art in Pangée Gallery">
       </div>
 
       <div class="gallery-block">
@@ -127,7 +127,7 @@
       <h5>Toronto</h5>
       <img class="gallery-block__image general-hardware" 
       src="images/gallery-block__img-general-hardware.png" 
-      alt="gallery block">
+      alt="Art in General Hardware Contemporary Gallery">
       </div>
 
       <div class="gallery-block">
@@ -135,7 +135,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-robert-poulin.png" 
-      alt="gallery block">
+      alt="Art in Galerie Robert Poulin">
       </div>
 
       <div class="gallery-block">
@@ -143,7 +143,7 @@
       <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-united-contemporary.png" 
-      alt="gallery block">
+      alt="Art in United Contemporary Gallery">
       </div>
 
       <div class="gallery-block__letter">
@@ -157,7 +157,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-galerie-bernard.png" 
-      alt="gallery block">
+      alt="Art in Galerie Bernard">
       </div>
 
       <div class="gallery-block">
@@ -165,7 +165,7 @@
       <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-christie.png" 
-      alt="gallery block">
+      alt="Art in Christie Contemporary Gallery">
       </div>
 
       <div class="gallery-block">
@@ -173,7 +173,7 @@
       <h5>Toronto</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-zalucky.png" 
-      alt="gallery block">
+      alt="Art in Zalucky Contemporary Gallery">
       </div>
 
       <div class="gallery-block">
@@ -181,7 +181,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-patrick-mikhail.png" 
-      alt="gallery block">
+      alt="Art in Patrick Mikhail Gallery">
       </div>
 
       <div class="gallery-block">
@@ -189,7 +189,7 @@
       <h5>Halifax</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-studio-21.png" 
-      alt="gallery block">
+      alt="Art in Studio 21 Fine Art Gallery">
       </div>
 
       <div class="gallery-block">
@@ -197,7 +197,7 @@
       <h5>Montreal</h5>
       <img class="gallery-block__image" 
       src="images/gallery-block__img-robertson-ares.png" 
-      alt="gallery block">
+      alt="Art in Galerie Robertson Ar&egrave;s Gallery">
       </div>
     </div>
   </main>
