remove old footer, add notes to code

--- a/projects-papier.html
+++ b/projects-papier.html
@@ -166,94 +166,9 @@
       <p class="footer-text__copyright">&copy; AGAC</p>
       <p class="footer-text__copyright">Design and code by Principal</p>
     </div>
-    </div>
+    
+    </div> <!--footer container-->
   </footer>
-
-<!--OLD FOOTER
-  <footer>
-  <div class="footer-container">
-    <div class="footer-brand">
-        <img 
-        class="footer-brand__logo-image" 
-        src="images/footer-brand__logo-image.svg"
-        alt="ACAG logo">
-        <p class="footer-brand__logo-name">Contemporary Art <br> Galleries Assoction</p>
-      </div>
-
-      <div class="footer__gallery-list">
-        <p class="footer-text__medium-gray">Art Mûr</p>
-        <p class="footer-text__medium-gray">Art45</p>
-        <p class="footer-text__medium-gray">Beaux-arts des Amériques</p>
-        <p class="footer-text__medium-gray">Blouin Division</p>
-        <p class="footer-text__medium-gray">Bradley Ertaskiran</p>
-        <p class="footer-text__medium-gray">Christie Contemporary</p>
-        <p class="footer-text__medium-gray">DURAN | MASHAAL</p>
-        <p class="footer-text__medium-gray">ELLEPHANT</p>
-        <p class="footer-text__medium-gray">Equinox Gallery</p>
-        <p class="footer-text__medium-gray">Feheley Fine Arts</p>
-        <p class="footer-text__medium-gray">Franz Kaka</p>
-        <p class="footer-text__medium-gray">Galerie 3</p>
-        <p class="footer-text__medium-gray">Galerie a</p>
-        <p class="footer-text__medium-gray">Galerie Bernard</p>
-        <p class="footer-text__medium-gray">Galerie C.O.A</p>
-        <p class="footer-text__medium-gray">Galerie Éric Devlin</p>
-        <p class="footer-text__medium-gray">Galerie Hugues Charbonneau</p>
-        <p class="footer-text__medium-gray">Galerie Jean-Claude Bergeron</p>
-        <p class="footer-text__medium-gray">Galerie Michel Guimont</p>
-        <p class="footer-text__medium-gray">Galerie Nicolas Robert</p>
-        <p class="footer-text__medium-gray">Galerie Robert Poulin</p>
-        <p class="footer-text__medium-gray">Galerie Robertson Arès</p>
-        <p class="footer-text__medium-gray">Galerie Simon Blais</p>
-        <p class="footer-text__medium-gray">Galerie Youn</p>
-        <p class="footer-text__medium-gray">Galeries Roger Bellemare et <br> Christian Lambert</p>
-        <p class="footer-text__medium-gray">General Hardware Contemporary</p>
-        <p class="footer-text__medium-gray">Lacerte art contemporain</p>
-        <p class="footer-text__medium-gray">Laroche/Joncas</p>
-        <p class="footer-text__medium-gray">McBride Contemporain</p>
-        <p class="footer-text__medium-gray">Pangée</p>
-        <p class="footer-text__medium-gray">Patrick Mikhail</p>
-        <p class="footer-text__medium-gray">Paul Petro Contemporary Ar</p>
-        <p class="footer-text__medium-gray">Pierre-François Ouellette <br> art contemporain</p>
-        <p class="footer-text__medium-gray">Stephen Bulger Gallery</p>
-        <p class="footer-text__medium-gray">Studio 21 Fine Art</p>
-        <p class="footer-text__medium-gray">TrépanierBaer Gallery</p>
-        <p class="footer-text__medium-gray">United Contemporary</p>
-        <p class="footer-text__medium-gray">VIVIANEART</p>
-        <p class="footer-text__medium-gray">Yves Laroche Galerie d&#39;art</p>
-        <p class="footer-text__medium-gray">Zalucky Contemporary</p>
-    </div>
-
-    <div class="footer-subscribe">
-      <p class="footer-text__black">Subscribe to our newsletter</p>
-      <form>
-      <span><input class="text-input-box" type="text" name="name" placeholder="Your email address" required><input class="submit-button" type="submit" value="Subscribe"></span>
-      </form>
-      </div>
-
-      <div class="footer-social">
-        <p class="footer-text__black">Follow us</p>
-
-        <ul class="social-list">
-        <li><img class="social-icon-circle" src="images/footer-social__logo-facebook.png" alt="facebook icon"></li>
-        <li><img class="social-icon-circle" src="images/footer-social__logo-twitter.png" alt="twitter icon"></li>
-        <li><img class="social-icon-circle" src="images/footer-social__logo-instagram.png" alt="instagram icon"></li>
-        <li><img class="social-icon-circle" src="images/footer-social__logo-youtube.png" alt="youtube icon"></li>
-        <li><img class="social-icon-circle" src="images/footer-social__logo-linkedin.png" alt="linkedin icon"></li>
-        </ul>
-      </div>
-
-      <div class="footer-support">
-        <p class="footer-text__black">With the support of</p>
-        <img src="images/footer-support__logo.svg" alt="Logo for Societ&eacute; de D&eacute;velopment des Enterprises Colturelles Quebec">
-      </div>
-
-      <div class="footer-copyright-credit">
-        <p class="footer-text__copyright">&copy; AGAC</p>
-        <p class="footer-text__copyright-credit">Design and code by Principal</p>
-      </div>
-    </div>
-  </footer>
--->
 
 </body>
 </html>
