fix image links

--- a/projects-papier.html
+++ b/projects-papier.html
@@ -33,7 +33,7 @@
   <main class="projects-page">
     <div class="hero">
         <div class="hero-image">
-          <img src="../images/hero__image.png" alt="people observing art in a gallery">
+          <img src="images/hero__image.png" alt="people observing art in a gallery">
         </div>
         <div class="hero__prev-next-text">
           <p>Previous project | Next project</p>
@@ -54,7 +54,7 @@
       </div>
 
       <div class="future-carousel">
-        <img src="../images/carousel__slide-show-05.png" alt="Papier14, Papier15 and Papier16 posters">
+        <img src="images/carousel__slide-show-05.png" alt="Papier14, Papier15 and Papier16 posters">
         <p class="carousel__caption-text">Papier07 and Papier08 posters</p>
       </div>
 
