--- a/projects-papier.html
+++ b/projects-papier.html
@@ -58,12 +58,84 @@
         <p class="carousel__caption-text">Papier07 and Papier08 posters</p>
       </div>
 
-    
-  </div>
+      <div class="project-text-block">
+        <h3>History of the Fair</h3>
+        <p>Over the years, Papier has become increasingly popular, drawing a growing number of art enthusiasts and seasoned collectors. Papier has been an important springboard for many artists, as well as the galleries that represent them.</p>
+        <div class="future-accordion-container">
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2007</p> 
+            <p class="future-accordion-text">Inaugural edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2008</p> 
+            <p class="future-accordion-text">2nd edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2010</p> 
+            <p class="future-accordion-text">3rd edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2011</p> 
+            <p class="future-accordion-text">4th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2012</p> 
+            <p class="future-accordion-text">5th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2013</p> 
+            <p class="future-accordion-text">6th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2014</p> 
+            <p class="future-accordion-text">7th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2015</p> 
+            <p class="future-accordion-text">8th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2016</p> 
+            <p class="future-accordion-text">9th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2017</p> 
+            <p class="future-accordion-text">10th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2018</p> 
+            <p class="future-accordion-text">11th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2019</p> 
+            <p class="future-accordion-text">12th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2020</p> 
+            <p class="future-accordion-text">13th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div>
+          <div class="future-accordion-row">
+            <p class="future-accordion-text">2021</p> 
+            <p class="future-accordion-text">14th edition</p>
+            <p class="future-accordion-text">+</p>
+          </div> 
+        </div> <!--future accordion container-->
+      </div><!--project text block-->
+    </div><!--project-page-content-->
    
-    
-
-
   </main>
 
   <footer>
