clean up and validate code

--- a/projects-papier.html
+++ b/projects-papier.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    <div class="header-container">
     <div class="header-main-nav">
       <ul class="header-main-nav__list">
         <li><a href="!#"><img class="logo-square" src="images/header-home-button.png" alt="header home button"></a></li>
@@ -27,6 +28,7 @@
       <div class="language">
         <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
       </div>
+    </div>
     </div>
   </header>
 
@@ -47,10 +49,10 @@
       </div>
 
       <div class="half-page-column">
-      <p>Created in 2007, Papier is the most important art fair in Quebec. The Montreal event is a driving force in the Canadian contemporary art market and is a space that creates opportunities for exchanges and encounters between the general public, art enthusiasts as well as professionals from the visual arts community.</p>
-      <p>AGAC flagship project for now thirteen editions, Papier brings together forty or so of the most prestigious Canadian art galleries each year, both members and non-members of the Association, allowing the public to discover nearly 400 artists.</p>
-      <p>Over the years, the fair has been awarded prestigious distinctions, including the Grafika award for its graphic identity, an award for its architectural design and has been named four years in a row by BizBash Magazine in the Top 100 Events in Canada.</p>
-      <p><a href="!#">Visit Papier&#39;s website</a></p>
+        <p>Created in 2007, Papier is the most important art fair in Quebec. The Montreal event is a driving force in the Canadian contemporary art market and is a space that creates opportunities for exchanges and encounters between the general public, art enthusiasts as well as professionals from the visual arts community.</p>
+        <p>AGAC flagship project for now thirteen editions, Papier brings together forty or so of the most prestigious Canadian art galleries each year, both members and non-members of the Association, allowing the public to discover nearly 400 artists.</p>
+        <p>Over the years, the fair has been awarded prestigious distinctions, including the Grafika award for its graphic identity, an award for its architectural design and has been named four years in a row by BizBash Magazine in the Top 100 Events in Canada.</p>
+        <p><a href="!#">Visit Papier&#39;s website</a></p>
       </div>
 
       <div class="future-carousel">
