--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
   <header>
+    <div class="header-container">
     <div class="header-main-nav">
       <ul class="header-main-nav__list">
         <li><a href="!#"><img class="logo-square" src="images/header-home-button.png" alt="header home button"></a></li>
@@ -28,176 +29,177 @@
         <p class="nav-text"><a class="nav" href="!#">Fr</a></p>
       </div>
     </div>
+    </div>
   </header>
 
   <main>
     <div class="gallery">
       <div class="gallery-block__letter">
-      <img class="gallery-block__letter" 
-      src="images/gallery-block__letter-a.png" 
-      alt="the letter A">
+        <img class="gallery-block__letter" 
+        src="images/gallery-block__letter-a.png" 
+        alt="the letter A">
       </div>
 
       <div class="gallery-block">
-      <h4>Laroche/Joncas</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image"
-      src="images/gallery-block__img-laroche-joncas.png"
-      alt="Art in Laroche/Joncas Gallery">
+        <h4>Laroche/Joncas</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image"
+        src="images/gallery-block__img-laroche-joncas.png"
+        alt="Art in Laroche/Joncas Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Gallery 3</h4>
-      <h5>Quebec</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-galerie-3.png" 
-      alt="Art in Gallery 3">
+        <h4>Gallery 3</h4>
+        <h5>Quebec</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-galerie-3.png" 
+        alt="Art in Gallery 3">
       </div>
 
       <div class="gallery-block__letter">
-      <img class="gallery-block__letter" 
-      src="images/gallery-block__letter-g.png" 
-      alt="the letter G">
+        <img class="gallery-block__letter" 
+        src="images/gallery-block__letter-g.png" 
+        alt="the letter G">
       </div>
 
       <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
 
       <div class="gallery-block">
-      <h4>Franz Kaka</h4>
-      <h5>Toronto</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-franz-kaka.png" 
-      alt="Art in Franz Kaka Gallery">
+        <h4>Franz Kaka</h4>
+        <h5>Toronto</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-franz-kaka.png" 
+        alt="Art in Franz Kaka Gallery">
+        </div>
+
+      <div class="gallery-block">
+        <h4>Art45</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-art-45.png" 
+        alt="Art in Art45 Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Art45</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-art-45.png" 
-      alt="Art in Art45 Gallery">
+        <h4>Paul Petro Contemporary Art</h4>
+        <h5>Toronto</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-paul_petro.png" 
+        alt="Art in Paul Petro Contemporary Art Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Paul Petro Contemporary Art</h4>
-      <h5>Toronto</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-paul_petro.png" 
-      alt="Art in Paul Petro Contemporary Art Gallery">
-      </div>
-
-      <div class="gallery-block">
-      <h4>DURAN | MASHAAL</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-duran-marshaal.png" 
-      alt="Art in DURAN | MASHAAL Gallery">
+        <h4>DURAN | MASHAAL</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-duran-marshaal.png" 
+        alt="Art in DURAN | MASHAAL Gallery">
       </div>
 
       <div class="gallery-block__letter">
-      <img class="gallery-block__letter" 
-      src="images/gallery-block__letter-a.png" 
-      alt="the letter A">
+        <img class="gallery-block__letter" 
+        src="images/gallery-block__letter-a.png" 
+        alt="the letter A">
       </div>
 
       <div class="gallery-block">
-      <h4>Bradley Ertaskiran</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-bradley-ertaskiran.png" 
-      alt="Art in Bradley Ertaskiran Gallery">
+        <h4>Bradley Ertaskiran</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-bradley-ertaskiran.png" 
+        alt="Art in Bradley Ertaskiran Gallery">
       </div>
 
       <div class="gallery-block__letter">
-      <img class="gallery-block__letter" 
-      src="images/gallery-block__letter-c.png" 
-      alt="the letter C">
+        <img class="gallery-block__letter" 
+        src="images/gallery-block__letter-c.png" 
+        alt="the letter C">
       </div>
 
       <div class="gallery-block">
-      <h4>Pang&eacute;e</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-pangee.png" 
-      alt="Art in Pangée Gallery">
+        <h4>Pang&eacute;e</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-pangee.png" 
+        alt="Art in Pangée Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>General Hardware Contemporary</h4>
-      <h5>Toronto</h5>
-      <img class="gallery-block__image general-hardware" 
-      src="images/gallery-block__img-general-hardware.png" 
-      alt="Art in General Hardware Contemporary Gallery">
+        <h4>General Hardware Contemporary</h4>
+        <h5>Toronto</h5>
+        <img class="gallery-block__image general-hardware" 
+        src="images/gallery-block__img-general-hardware.png" 
+        alt="Art in General Hardware Contemporary Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Galerie Robert Poulin</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-robert-poulin.png" 
-      alt="Art in Galerie Robert Poulin">
+        <h4>Galerie Robert Poulin</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-robert-poulin.png" 
+        alt="Art in Galerie Robert Poulin">
       </div>
 
       <div class="gallery-block">
-      <h4>United Contemporary</h4>
-      <h5>Toronto</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-united-contemporary.png" 
-      alt="Art in United Contemporary Gallery">
+        <h4>United Contemporary</h4>
+        <h5>Toronto</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-united-contemporary.png" 
+        alt="Art in United Contemporary Gallery">
       </div>
 
       <div class="gallery-block__letter">
-      <img class="gallery-block__letter" 
-      src="images/gallery-block__letter-amp.png" 
-      alt="ampersand">
+        <img class="gallery-block__letter" 
+        src="images/gallery-block__letter-amp.png" 
+        alt="ampersand">
       </div>
 
       <div class="gallery-block">
-      <h4>Galerie Bernard</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-galerie-bernard.png" 
-      alt="Art in Galerie Bernard">
+        <h4>Galerie Bernard</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-galerie-bernard.png" 
+        alt="Art in Galerie Bernard">
       </div>
 
       <div class="gallery-block">
-      <h4>Christie Contemporary</h4>
-      <h5>Toronto</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-christie.png" 
-      alt="Art in Christie Contemporary Gallery">
+        <h4>Christie Contemporary</h4>
+        <h5>Toronto</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-christie.png" 
+        alt="Art in Christie Contemporary Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Zalucky Contemporary</h4>
-      <h5>Toronto</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-zalucky.png" 
-      alt="Art in Zalucky Contemporary Gallery">
+        <h4>Zalucky Contemporary</h4>
+        <h5>Toronto</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-zalucky.png" 
+        alt="Art in Zalucky Contemporary Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Patrick Mikhail</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-patrick-mikhail.png" 
-      alt="Art in Patrick Mikhail Gallery">
+        <h4>Patrick Mikhail</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-patrick-mikhail.png" 
+        alt="Art in Patrick Mikhail Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Studio 21 Fine Art</h4>
-      <h5>Halifax</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-studio-21.png" 
-      alt="Art in Studio 21 Fine Art Gallery">
+        <h4>Studio 21 Fine Art</h4>
+        <h5>Halifax</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-studio-21.png" 
+        alt="Art in Studio 21 Fine Art Gallery">
       </div>
 
       <div class="gallery-block">
-      <h4>Galerie Robertson Ar&egrave;s</h4>
-      <h5>Montreal</h5>
-      <img class="gallery-block__image" 
-      src="images/gallery-block__img-robertson-ares.png" 
-      alt="Art in Galerie Robertson Ar&egrave;s Gallery">
+        <h4>Galerie Robertson Ar&egrave;s</h4>
+        <h5>Montreal</h5>
+        <img class="gallery-block__image" 
+        src="images/gallery-block__img-robertson-ares.png" 
+        alt="Art in Galerie Robertson Ar&egrave;s Gallery">
       </div>
     </div> <!--gallery-->
   </main>
