more media queries and adjustments

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="home-page">
     <div class="gallery">
       <div class="gallery-block__letter">
         <img class="gallery-block__letter" 
