link pages to each other

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul class="header-main-nav__list">
           <li><a href="!#"><img class="logo-square" src="images/header-home-button.png" alt="header home button"></a></li>
           <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
-          <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
+          <li class="nav-text"><a class="nav" href="projects-papier.html">Projects</a></li>
           <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
           <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
           <li class="nav-text"><a class="nav" href="!#">About</a></li>
