--- a/projects-papier.html
+++ b/projects-papier.html
@@ -15,9 +15,9 @@
     <div class="header-container">
     <div class="header-main-nav">
       <ul class="header-main-nav__list">
-        <li><a href="!#"><img class="logo-square" src="images/header-home-button.png" alt="header home button"></a></li>
+        <li><a href="index.html"><img class="logo-square" src="images/header-home-button.png" alt="header home button"></a></li>
         <li class="nav-text"><a class="nav" href="!#">Galleries</a></li>
-        <li class="nav-text"><a class="nav" href="!#">Projects</a></li>
+        <li class="nav-text"><a class="nav" href="projects-papier.html">Projects</a></li>
         <li class="nav-text"><a class="nav" href="!#">Awards</a></li>
         <li class="nav-text"><a class="nav" href="!#">Publications</a></li>
         <li class="nav-text"><a class="nav" href="!#">About</a></li>
