fix footer image links

--- a/projects-papier.html
+++ b/projects-papier.html
@@ -173,7 +173,7 @@
       <div class="footer-brand">
         <img 
         class="footer-brand__logo-image" 
-        src="../images/footer-brand__logo-image.svg"
+        src="images/footer-brand__logo-image.svg"
         alt="ACAG logo">
         <p class="footer-brand__logo-name">Contemporary Art <br> Galleries Assoction</p>
       </div>
@@ -232,11 +232,11 @@
         <div class="footer-social">
           <p class="footer-text__black">Follow us</p>
             <ul class="social-list">
-            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="../images/footer-social__logo-facebook.png" alt="facebook icon"></a></li>
-            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="../images/footer-social__logo-twitter.png" alt="twitter icon"></a></li>
-            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="../images/footer-social__logo-instagram.png" alt="instagram icon"></a></li>
-            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="../images/footer-social__logo-youtube.png" alt="youtube icon"></a></li>
-            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="../images/footer-social__logo-linkedin.png" alt="linkedin icon"></a></li>
+            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="images/footer-social__logo-facebook.png" alt="facebook icon"></a></li>
+            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="images/footer-social__logo-twitter.png" alt="twitter icon"></a></li>
+            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="images/footer-social__logo-instagram.png" alt="instagram icon"></a></li>
+            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="images/footer-social__logo-youtube.png" alt="youtube icon"></a></li>
+            <li><a class="social-link" href="#!"><img class="social-icon-circle" src="images/footer-social__logo-linkedin.png" alt="linkedin icon"></a></li>
           </ul>
         </div>
 
@@ -244,7 +244,7 @@
         <p class="footer-text__black footer-support-text">With the support of</p>
         <a href="#!">
           <img class="footer-support-logo" 
-          src="../images/footer-support__logo.png" 
+          src="images/footer-support__logo.png" 
           alt="Logo for Societ&eacute; de D&eacute;velopment des Enterprises Colturelles Quebec">
         </a>
       </div>
